@@ -2,6 +2,7 @@
 Changes between 1.3.4 and 1.4.0.dev0
 ==================================================
 
+- fix issue123 - new "python -m py.test" invocation for py.test
 - fix issue124 - make reporting more resilient against tests opening
   files on filedescriptor 1 (stdout).
 - fix issue109 - sibling conftest.py files will not be loaded.
